community-customizations/main/default/objects/Staffer__c/Staffer__c.object-meta.xml
<CustomObject>
    <description>Staffer Object for Lightning Ambassadors</description>
    <label>Staffer</label>
    <nameField>
        <label>Staffers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staffer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>