community-customizations/main/default/objects/Staffer__c/fields/Able_to_do_Onsite_Readiness_Consult__c.field-meta.xml
<CustomField>
    <fullName>Able_to_do_Onsite_Readiness_Consult__c</fullName>
    <label>Able to do Onsite Readiness Consult?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>