community-customizations/main/default/objects/Staffer__c/fields/AM_PM_Start__c.field-meta.xml
<CustomField>
    <fullName>AM_PM_Start__c</fullName>
    <label>AM/PM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>