community-customizations/main/default/objects/Staffer__c/fields/Confirm_Availability_Prior_to_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Availability_Prior_to_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Availability Prior to Scheduling</label>
    <type>Checkbox</type>
</CustomField>