community-customizations/main/default/objects/Staffer__c/fields/Location_if_Outside_of_U_S__c.field-meta.xml
<CustomField>
    <fullName>Location_if_Outside_of_U_S__c</fullName>
    <label>Location if Outside of U.S.</label>
    <length>225</length>
    <type>Text</type>
</CustomField>