community-customizations/main/default/objects/Staffer__c/fields/No_of_Online_Readiness_Consults__c.field-meta.xml
<CustomField>
    <fullName>No_of_Online_Readiness_Consults__c</fullName>
    <inlineHelpText>Number of Online Readiness Consults you can perform each month.</inlineHelpText>
    <label>No. of Online Readiness Consults</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>Any number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>