community-customizations/main/default/objects/Staffer__c/fields/Other_Language__c.field-meta.xml
<CustomField>
    <fullName>Other_Language__c</fullName>
    <label>Other Language</label>
    <length>225</length>
    <type>Text</type>
</CustomField>