community-customizations/main/default/objects/Staffer__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AEDT</fullName>
            </value>
            <value>
                <fullName>BRST</fullName>
            </value>
            <value>
                <fullName>CET</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>EST</fullName>
            </value>
            <value>
                <fullName>GMT</fullName>
            </value>
            <value>
                <fullName>IDT</fullName>
            </value>
            <value>
                <fullName>JST</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>UTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>