community-customizations/main/default/objects/Staffer__c/fields/Which_Onsite_Locations__c.field-meta.xml
<CustomField>
    <fullName>Which_Onsite_Locations__c</fullName>
    <label>Which Onsite Locations?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>