community-customizations/main/default/objects/Staffer__c/validationRules/Other_Language_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Language_Input</fullName>
    <active>true</active>
    <description>If Languages equals Not Listed, enter Other Language</description>
    <errorConditionFormula>INCLUDES(Languages__c, &quot;Not Listed&quot;)  &amp;&amp;  ISBLANK(Other_Language__c)</errorConditionFormula>
    <errorDisplayField>Other_Language__c</errorDisplayField>
    <errorMessage>Please enter your additional language(s) not found in the Languages list.</errorMessage>
</ValidationRule>