community-customizations/main/default/objects/Staffer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Able_to_do_Online_Readiness_Consult__c</columns>
    <columns>Able_to_do_Onsite_Readiness_Consult__c</columns>
    <columns>Email__c</columns>
    <columns>State__c</columns>
    <columns>Time_Zone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>